--- a/bower.json
+++ b/bower.json
@@ -21,9 +21,8 @@
     "BSD",
     "MIT"
   ],
-  "homepage": "http://dbushell.github.io/Pikaday/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dbushell/Pikaday.git"
+    "url": "https://github.com/trillioncz/Pikaday.git"
   }
 }
